test/bad/lambdas/call01.px

f: Int->Int = _
f()
